// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creating email > notebookInvitation email > renders email template as html string with creator info 1`] = `
<div>
  <div>
    <p>
      Bonjour 
      Prénom Nom
      ,
    </p>
    <!--&lt;Greeting&gt;-->
     
    <p>
      Vous avez été invité(e) à rejoindre un carnet de bord par
			
      <b>
        Prénom du créateur Nom du créateur
      </b>
      .
    </p>
     
    <p>
      Pour accéder à Carnet de bord, veuillez cliquer sur le lien ci-dessous :
    </p>
     
    <p
      style="padding-left: 20%;"
    >
      <a
        href="some-url.com/auth/jwt/access-key?url=redirect-to-url.com"
        rel="nofollow"
        style="background-color: rgb(106, 32, 174); font-size: 14px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; text-decoration: none; padding: 8px 10px; color: rgb(255, 255, 255); border-radius: 5px; display: inline-block;"
      >
        <span>
          Accédez à Carnet de bord
        </span>
      </a>
    </p>
    <!--&lt;AccessButton&gt;-->
     
    <p>
      L'équipe Carnet de bord
    </p>
    <!--&lt;Footer&gt;-->
  </div>
  <!--&lt;NotebookInvitation&gt;-->
</div>
`;

exports[`creating email > notebookInvitation email > renders email template as html string without creator info 1`] = `
<div>
  <div>
    <p>
      Bonjour 
      Prénom Nom
      ,
    </p>
    <!--&lt;Greeting&gt;-->
     
     
    <p>
      Pour accéder à Carnet de bord, veuillez cliquer sur le lien ci-dessous :
    </p>
     
    <p
      style="padding-left: 20%;"
    >
      <a
        href="some-url.com/auth/jwt/access-key?url=redirect-to-url.com"
        rel="nofollow"
        style="background-color: rgb(106, 32, 174); font-size: 14px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; text-decoration: none; padding: 8px 10px; color: rgb(255, 255, 255); border-radius: 5px; display: inline-block;"
      >
        <span>
          Accédez à Carnet de bord
        </span>
      </a>
    </p>
    <!--&lt;AccessButton&gt;-->
     
    <p>
      L'équipe Carnet de bord
    </p>
    <!--&lt;Footer&gt;-->
  </div>
  <!--&lt;NotebookInvitation&gt;-->
</div>
`;
